--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+.bo {
+  text-align: center;
+ 
+}
+
+
+ .cc {
+   margin-right: 100px;
+ }
+ .re-btn{
+   margin-right: 150px;
+ }
+ .sora {
+   width: 1500px;
+   height: 300px;
+ }
+ .tex {
+   font-style:unset;
+   font-size: 15pt;
+   font-weight: bold;
+   color: red;
+ }
+ .pro{
+   display:flex;
+   justify-content: space-around;
+ }
+ .fr {
+   width: 200px;
+   height: 200px;
+ }
+ .sec{
+  width: 200px;
+  height: 200px; 
+ }
+ .thr {
+  width: 200px;
+  height: 200px;
+ }
+ .aa{
+   margin-left: 15%;
+   padding-bottom: 20%;
+ }
+ .cho {
+   margin-right: 15%;
+ }
+ .rr{
+   border-radius: 50px;
+   height: 30px;
+   width: 200px;
+   
+ }
+ .dd{
+  border-radius: 50px;
+  height: 23px;
+  width: 200px;
+ 
+ }
+.dec-btn
+{
+  border-radius: 50px;
+  height: 20px;
+  width: 40px;
+}
+.incr-btn{
+  border-radius: 50px;
+  height: 20px;
+  width: 40px;
+}
+.re-btn{
+  border-radius: 50px;
+  height: 23px;
+  width: 100px;
+}
+
+.se{
+  border-radius: 50px;
+  height: 26px;
+  width: 150px;
+ margin-right: 12%;
+ background-color: red;
+}
+.pro-num{
+  display:flex;
+   justify-content: space-around;
+}
+.App{
+  text-align: center;
+ 
+  padding-bottom: 50%;
+}
+.ee {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ii {
+  text-align: center;
 }
+.xx {
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
